# Rust-MC-SimulationLib

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  resume.md
.github/workflows/: ci.yml
examples/: 01_svd_basics.rs  02_cp_decompose.rs  03_ducru_blending.rs  04_log_decimated_cdf.rs  05_stress_200k.rs  06_table_vs_svd.rs  07_physics_primitives.rs  08_urr_sampling.rs  09_keigenvalue_godiva.rs  10_pwr_pin_cell.rs  11_fixed_source_shielding.rs  12_photon_shielding.rs  13_reactor_preview.rs  14_french_cp1_core_preview.rs  15_ascii_reactor_preview.rs  16_pwr_assembly_keff.rs
src/: batch.rs  cdf.rs  cp.rs  cram.rs  doppler.rs  ducru.rs  error.rs  expm.rs  lib.rs  nuclear_hdf5.rs  nuclear_loader.rs  nuclear_thermal.rs  nuclear_wmp.rs  rng.rs  svd.rs  table.rs  urr.rs
src/decay/: chain.rs  mod.rs  openmc_xml.rs
src/depletion/: bateman.rs  mod.rs
src/fission_yields/: mod.rs
src/geometry/: aabb.rs  bvh.rs  cell.rs  ray.rs
src/kinetics/: mod.rs  point.rs
src/photon/: data.rs  interactions.rs  loader.rs  material.rs  mod.rs  source.rs  transport.rs
src/physics/: angular.rs  mod.rs  scatter.rs  spectra.rs  thermal.rs
src/preview/: ascii.rs  mod.rs  render.rs
src/tally/: flux.rs  keff.rs  mod.rs
src/transport/: collision.rs  fixed_source.rs  material.rs  mod.rs  particle.rs  simulate.rs
