[package]
name = "tensor-compress"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Low-rank approximations of multi-way tabulated data: truncated SVD with Ducru-weighted off-grid reconstruction, CP/PARAFAC for 3-tensors, and log-decimated CDF sampling. Extracted from open_rust_mc, generalised for non-nuclear use."
repository = "https://github.com/sorcerer86pt/tensor-compress-rs"
homepage = "https://github.com/sorcerer86pt/tensor-compress-rs"
documentation = "https://docs.rs/tensor-compress"
readme = "README.md"
keywords = ["svd", "tensor", "parafac", "decomposition", "compression"]
categories = ["mathematics", "science", "compression"]

[dependencies]
faer = "0.22"
# hdf5-pure powers the optional `nuclear` feature: pure-Rust OpenMC
# HDF5 reader, WMP loader, S(α,β) loader. Pure-math callers don't pay
# for it.
hdf5-pure = { version = "0.1", optional = true }

[features]
# Default ships only the pure-math layer (svd, cp, ducru, cdf).
default = []
# Bundles the nuclear-data layer extracted from open_rust_mc:
# windowed multipole + Humlicek W4 Faddeeva, S(α,β) thermal kernels,
# OpenMC HDF5 reader. All gated behind one feature flag so callers
# who only want the math compress to a thin dep tree.
nuclear = ["dep:hdf5-pure"]

[dev-dependencies]
# Add criterion later if we want benchmarks; keep deps minimal for now.

[profile.release]
opt-level = 3
lto = "thin"

[lints.clippy]
unwrap_used = "deny"
undocumented_unsafe_blocks = "warn"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
