[package]
name = "rust-mc-sim"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Reusable building blocks for Monte Carlo simulation in Rust: SVD/CP-PARAFAC tensor compression, Ducru off-grid reconstruction, log-decimated CDF inverse-transform sampling, PCG-64 RNG, and (optionally) the OpenMC nuclear-data layer (HDF5 reader, Windowed Multipole, S(α,β)). Extracted from open_rust_mc, validated end-to-end against OpenMC 0.15.3."
repository = "https://github.com/sorcerer86pt/Rust-MC-SimulationLib"
homepage = "https://github.com/sorcerer86pt/Rust-MC-SimulationLib"
documentation = "https://docs.rs/rust-mc-sim"
readme = "README.md"
keywords = ["monte-carlo", "svd", "parafac", "nuclear", "simulation"]
categories = ["mathematics", "science", "simulation"]

[dependencies]
faer = "0.22"
# hdf5-pure powers the optional `nuclear` feature: pure-Rust OpenMC
# HDF5 reader, WMP loader, S(α,β) loader. Pure-math callers don't pay
# for it.
hdf5-pure = { version = "0.1", optional = true }
# rayon powers the optional `parallel` feature: batch APIs that fan
# out across cores for at-scale loads (200k-nuclide depletion-style
# libraries, large CP-decomposition sweeps, etc.).
rayon = { version = "1", optional = true }
# quick-xml powers the optional `chain` feature: OpenMC chain.xml
# parser for depletion / decay / fission-yield data.
quick-xml = { version = "0.36", optional = true }

[features]
# Default ships only the pure-math layer (svd, cp, ducru, cdf, rng).
default = []
# Nuclear-data layer extracted from open_rust_mc: WMP + Humlicek W4
# Faddeeva, S(α,β) thermal kernels, OpenMC HDF5 reader. Gated behind
# one feature so pure-math callers get a thin dep tree.
nuclear = ["dep:hdf5-pure"]
# Parallel batch APIs: `decompose_many_par`, `cp_many_par`, etc.
# Only useful when you have many independent decompositions/loads.
# Sequential APIs are always available regardless of this flag.
parallel = ["dep:rayon"]
# OpenMC chain.xml parser for `decay::chain` + `fission_yields`.
# In-memory `DecayChain` data structures and the `depletion::bateman`
# Bateman/CRAM solver are always available; only the XML loader is
# gated.
chain = ["dep:quick-xml"]

[dev-dependencies]
# Add criterion later if we want benchmarks; keep deps minimal for now.

[profile.release]
opt-level = 3
lto = "thin"

[lints.clippy]
unwrap_used = "deny"
undocumented_unsafe_blocks = "warn"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
