[package]
name = "rust-mc-sim"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Reusable building blocks for Monte Carlo simulation in Rust: SVD/CP-PARAFAC tensor compression, Ducru off-grid reconstruction, log-decimated CDF inverse-transform sampling, PCG-64 RNG, and (optionally) the OpenMC nuclear-data layer (HDF5 reader, Windowed Multipole, S(α,β)). Extracted from open_rust_mc, validated end-to-end against OpenMC 0.15.3."
repository = "https://github.com/sorcerer86pt/Rust-MC-SimulationLib"
homepage = "https://github.com/sorcerer86pt/Rust-MC-SimulationLib"
documentation = "https://docs.rs/rust-mc-sim"
readme = "README.md"
keywords = ["monte-carlo", "svd", "parafac", "nuclear", "simulation"]
categories = ["mathematics", "science", "simulation"]

[dependencies]
faer = "0.22"
# hdf5-pure powers the optional `nuclear` feature: pure-Rust OpenMC
# HDF5 reader, WMP loader, S(α,β) loader. Pure-math callers don't pay
# for it.
hdf5-pure = { version = "0.1", optional = true }
# rayon powers the optional `parallel` feature: batch APIs that fan
# out across cores for at-scale loads (200k-nuclide depletion-style
# libraries, large CP-decomposition sweeps, etc.).
rayon = { version = "1", optional = true }
# quick-xml powers the optional `chain` feature: OpenMC chain.xml
# parser for depletion / decay / fission-yield data.
quick-xml = { version = "0.36", optional = true }
# minifb powers the optional `preview` feature: cross-platform
# pixel-buffer window for static geometry previews.
minifb = { version = "0.27", optional = true }
# font8x8 ships an embedded 8 × 8 ASCII bitmap font used by the
# preview's legend window. Pure Rust, ~7 KB compiled, no_std.
font8x8 = { version = "0.3", optional = true, default-features = false, features = ["unicode"] }

[features]
# Default ships only the pure-math layer (svd, cp, ducru, cdf, rng).
default = []
# Nuclear-data layer extracted from open_rust_mc: WMP + Humlicek W4
# Faddeeva, S(α,β) thermal kernels, OpenMC HDF5 reader. Gated behind
# one feature so pure-math callers get a thin dep tree.
nuclear = ["dep:hdf5-pure"]
# Parallel batch APIs: `decompose_many_par`, `cp_many_par`, etc.
# Only useful when you have many independent decompositions/loads.
# Sequential APIs are always available regardless of this flag.
parallel = ["dep:rayon"]
# OpenMC chain.xml parser for `decay::chain` + `fission_yields`.
# In-memory `DecayChain` data structures and the `depletion::bateman`
# Bateman/CRAM solver are always available; only the XML loader is
# gated.
chain = ["dep:quick-xml"]
# Static geometry previewer — opens a window and renders a top-down
# CSG slice into it. Useful for sanity-checking a reactor or
# shielding geometry before launching a full Monte Carlo run.
preview = ["dep:minifb", "dep:font8x8"]

[dev-dependencies]
# Add criterion later if we want benchmarks; keep deps minimal for now.

# Examples gated on the optional features they consume. Without these
# `[[example]]` declarations cargo would try to build them with the
# default feature set (pure-math only), which fails on the missing
# `rust_mc_sim::nuclear::*` and `rust_mc_sim::preview::*` paths.
[[example]]
name = "10_pwr_pin_cell"
required-features = ["nuclear"]

[[example]]
name = "11_fixed_source_shielding"
required-features = ["nuclear"]

[[example]]
name = "12_photon_shielding"
required-features = ["nuclear"]

[[example]]
name = "13_reactor_preview"
required-features = ["preview"]

[[example]]
name = "14_french_cp1_core_preview"
required-features = ["preview"]

[[example]]
name = "15_ascii_reactor_preview"
required-features = ["preview"]

[[example]]
name = "16_pwr_assembly_keff"
required-features = ["nuclear", "preview"]

[profile.release]
opt-level = 3
lto = "thin"

[lints.clippy]
# Correctness / safety lints kept on. Numerical-code idioms that
# clippy flags as bugs but are deliberate physics conventions are
# allowed below.
unwrap_used = "deny"
undocumented_unsafe_blocks = "warn"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
# Numerical-code idioms that clippy flags but are deliberate here:
#   - Matrix / per-axis loops genuinely need the index (CRAM solver,
#     Gauss-Jordan, lattice axis dispatch, FSR walks).
#   - Transcendental constants (CRAM IPF poles/residues, Gauss-
#     Legendre nodes/weights) need every digit of f64 precision —
#     clippy's "excessive precision" treats them like typos.
#   - Documentation prose: aligned doc list continuations, lazy
#     continuations after a colon are intentional for readability of
#     physics derivations.
#   - `vec![…]` in test fixtures stays.
#   - Per-step builders are typically built incrementally
#     (`Default::default()` then `.field = Some(…)`); clippy's
#     `field_reassign_with_default` would force struct-update syntax.
#   - Transport / variance-reduction functions take many arguments
#     by physics necessity (XS, geometry, RNG, tallies, …).
needless_range_loop = "allow"
excessive_precision = "allow"
useless_vec = "allow"
doc_overindented_list_items = "allow"
doc_lazy_continuation = "allow"
field_reassign_with_default = "allow"
too_many_arguments = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
double_comparisons = "allow"
manual_memcpy = "allow"
needless_late_init = "allow"
